cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: /* empty */
    7             | feature_list feature

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expr ';'

   11 formal_list: /* empty */
   12            | formal
   13            | formal ',' formal_list

   14 formal: OBJECTID ':' TYPEID

   15 expr_list: expr
   16          | expr_list ',' expr

   17 expr_block: expr ';'
   18           | expr ';' expr_block

   19 expr: OBJECTID ASSIGN expr
   20     | expr '.' OBJECTID '(' expr_list ')'
   21     | expr '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   22     | OBJECTID '(' expr_list ')'
   23     | expr '.' OBJECTID '(' ')'
   24     | expr '.' '@' TYPEID '.' OBJECTID '(' ')'
   25     | OBJECTID '(' ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_block '}'
   29     | LET let_init
   30     | CASE expr OF cases ESAC
   31     | NEW TYPEID
   32     | ISVOID expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '~' expr
   38     | expr '<' expr
   39     | expr LE expr
   40     | expr '=' expr
   41     | NOT expr
   42     | '(' expr ')'
   43     | OBJECTID
   44     | INT_CONST
   45     | STR_CONST
   46     | BOOL_CONST

   47 let_init: OBJECTID ':' TYPEID IN expr
   48         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   49         | OBJECTID ':' TYPEID ',' let_init
   50         | OBJECTID ':' TYPEID ASSIGN expr ',' let_init

   51 cases: case
   52      | cases case

   53 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 20 21 22 23 24 25 42
')' (41) 8 20 21 22 23 24 25 42
'*' (42) 35
'+' (43) 33
',' (44) 13 16 49 50
'-' (45) 34
'.' (46) 20 21 23 24
'/' (47) 36
':' (58) 8 9 10 14 47 48 49 50 53
';' (59) 4 5 8 9 10 17 18 53
'<' (60) 38
'=' (61) 40
'@' (64) 21 24
'{' (123) 4 5 8 28
'}' (125) 4 5 8 28
'~' (126) 37
error (256)
CLASS (258) 4 5
ELSE (259) 26
FI (260) 26
IF (261) 26
IN (262) 47 48
INHERITS (263) 5
LET (264) 29
LOOP (265) 27
POOL (266) 27
THEN (267) 26
WHILE (268) 27
CASE (269) 30
ESAC (270) 30
OF (271) 30
DARROW (272) 53
NEW (273) 31
ISVOID (274) 32
STR_CONST (275) 45
INT_CONST (276) 44
BOOL_CONST (277) 46
TYPEID (278) 4 5 8 9 10 14 21 24 31 47 48 49 50 53
OBJECTID (279) 8 9 10 14 19 20 21 22 23 24 25 43 47 48 49 50 53
ASSIGN (280) 10 19 48 50
NOT (281) 41
LE (282) 39
ERROR (283)
LETIN (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5, on right: 2 3
feature_list (50)
    on left: 6 7, on right: 4 5 7
feature (51)
    on left: 8 9 10, on right: 7
formal_list (52)
    on left: 11 12 13, on right: 8 13
formal (53)
    on left: 14, on right: 12 13
expr_list (54)
    on left: 15 16, on right: 16 20 21 22
expr_block (55)
    on left: 17 18, on right: 18 28
expr (56)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46, on right: 8 10 15 16 17 18 19 20
    21 23 24 26 27 30 32 33 34 35 36 37 38 39 40 41 42 47 48 50 53
let_init (57)
    on left: 47 48 49 50, on right: 29 49 50
cases (58)
    on left: 51 52, on right: 30 52
case (59)
    on left: 53, on right: 51 52


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature  go to state 15


state 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 16


state 13

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expr ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


state 14

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 19


state 15

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 15


state 17

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 11 (formal_list)

    formal_list  go to state 22
    formal       go to state 23


state 18

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expr ';'

    TYPEID  shift, and go to state 24


state 19

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 25


state 21

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 26


state 22

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 27


state 23

   12 formal_list: formal .
   13            | formal . ',' formal_list

    ','  shift, and go to state 28

    $default  reduce using rule 12 (formal_list)


state 24

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expr ';'

    ASSIGN  shift, and go to state 29
    ';'     shift, and go to state 30


state 25

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 26

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 31


state 27

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 32


state 28

   13 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 11 (formal_list)

    formal_list  go to state 33
    formal       go to state 23


state 29

   10 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 48


state 30

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


state 31

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


state 32

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 49


state 33

   13 formal_list: formal ',' formal_list .

    $default  reduce using rule 13 (formal_list)


state 34

   26 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 50


state 35

   29 expr: LET . let_init

    OBJECTID  shift, and go to state 51

    let_init  go to state 52


state 36

   27 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 53


state 37

   30 expr: CASE . expr OF cases ESAC

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 54


state 38

   31 expr: NEW . TYPEID

    TYPEID  shift, and go to state 55


state 39

   32 expr: ISVOID . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 56


state 40

   45 expr: STR_CONST .

    $default  reduce using rule 45 (expr)


state 41

   44 expr: INT_CONST .

    $default  reduce using rule 44 (expr)


state 42

   46 expr: BOOL_CONST .

    $default  reduce using rule 46 (expr)


state 43

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' expr_list ')'
   25     | OBJECTID . '(' ')'
   43     | OBJECTID .

    ASSIGN  shift, and go to state 57
    '('     shift, and go to state 58

    $default  reduce using rule 43 (expr)


state 44

   41 expr: NOT . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 59


state 45

   37 expr: '~' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 60


state 46

   28 expr: '{' . expr_block '}'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr_block  go to state 61
    expr        go to state 62


state 47

   42 expr: '(' . expr ')'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 63


state 48

   10 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71
    ';'  shift, and go to state 72


state 49

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 73


state 50

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   26     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    THEN  shift, and go to state 74
    LE    shift, and go to state 64
    '<'   shift, and go to state 65
    '='   shift, and go to state 66
    '+'   shift, and go to state 67
    '-'   shift, and go to state 68
    '*'   shift, and go to state 69
    '/'   shift, and go to state 70
    '.'   shift, and go to state 71


state 51

   47 let_init: OBJECTID . ':' TYPEID IN expr
   48         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   49         | OBJECTID . ':' TYPEID ',' let_init
   50         | OBJECTID . ':' TYPEID ASSIGN expr ',' let_init

    ':'  shift, and go to state 75


state 52

   29 expr: LET let_init .

    $default  reduce using rule 29 (expr)


state 53

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   27     | WHILE expr . LOOP expr POOL
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LOOP  shift, and go to state 76
    LE    shift, and go to state 64
    '<'   shift, and go to state 65
    '='   shift, and go to state 66
    '+'   shift, and go to state 67
    '-'   shift, and go to state 68
    '*'   shift, and go to state 69
    '/'   shift, and go to state 70
    '.'   shift, and go to state 71


state 54

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   30     | CASE expr . OF cases ESAC
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    OF   shift, and go to state 77
    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71


state 55

   31 expr: NEW TYPEID .

    $default  reduce using rule 31 (expr)


state 56

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   32     | ISVOID expr .
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '.'  shift, and go to state 71

    $default  reduce using rule 32 (expr)


state 57

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 78


state 58

   22 expr: OBJECTID '(' . expr_list ')'
   25     | OBJECTID '(' . ')'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47
    ')'         shift, and go to state 79

    expr_list  go to state 80
    expr       go to state 81


state 59

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   41     | NOT expr .

    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 41 (expr)


state 60

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | '~' expr .
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '.'  shift, and go to state 71

    $default  reduce using rule 37 (expr)


state 61

   28 expr: '{' expr_block . '}'

    '}'  shift, and go to state 82


state 62

   17 expr_block: expr . ';'
   18           | expr . ';' expr_block
   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71
    ';'  shift, and go to state 83


state 63

   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   42     | '(' expr . ')'

    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71
    ')'  shift, and go to state 84


state 64

   39 expr: expr LE . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 85


state 65

   38 expr: expr '<' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 86


state 66

   40 expr: expr '=' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 87


state 67

   33 expr: expr '+' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 88


state 68

   34 expr: expr '-' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 89


state 69

   35 expr: expr '*' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 90


state 70

   36 expr: expr '/' . expr

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 91


state 71

   20 expr: expr '.' . OBJECTID '(' expr_list ')'
   21     | expr '.' . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr '.' . OBJECTID '(' ')'
   24     | expr '.' . '@' TYPEID '.' OBJECTID '(' ')'

    OBJECTID  shift, and go to state 92
    '@'       shift, and go to state 93


state 72

   10 feature: OBJECTID ':' TYPEID ASSIGN expr ';' .

    $default  reduce using rule 10 (feature)


state 73

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 94


state 74

   26 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 95


state 75

   47 let_init: OBJECTID ':' . TYPEID IN expr
   48         | OBJECTID ':' . TYPEID ASSIGN expr IN expr
   49         | OBJECTID ':' . TYPEID ',' let_init
   50         | OBJECTID ':' . TYPEID ASSIGN expr ',' let_init

    TYPEID  shift, and go to state 96


state 76

   27 expr: WHILE expr LOOP . expr POOL

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expr  go to state 97


state 77

   30 expr: CASE expr OF . cases ESAC

    OBJECTID  shift, and go to state 98

    cases  go to state 99
    case   go to state 100


state 78

   19 expr: OBJECTID ASSIGN expr .
   20     | expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 64
    '<'  shift, and go to state 65
    '='  shift, and go to state 66
    '+'  shift, and go to state 67
    '-'  shift, and go to state 68
    '*'  shift, and go to state 69
    '/'  shift, and go to state 70
    '.'  shift, and go to state 71

    $default  reduce using rule 19 (expr)


state 79

   25 expr: OBJECTID '(' ')' .

    $default  reduce using rule 25 (expr)


state 80

   16 expr_list: expr_list . ',' expr
   22 expr: OBJECTID '(' expr_list . ')'

    ')'  shift, and go to state 101
    ','  shift, and go to state 102


state 81

   15 expr_list: expr .
   20 expr: expr . '.' OBJECTID '(' expr_list ')'
   21     | expr . '.' '@' TYPEID '.' OBJECTID '(' expr_list ')'
   23     | expr . '.' OBJECTID '(' ')'
   24     | expr . '.' '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
